Closed Bug 1874960 Opened 1 year ago Closed 1 year ago

Broken UTF-16 string causes permanent fallback to XUL notification until restart

Categories

(Toolkit :: Alerts Service, defect)

Unspecified
Windows 11
defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox124 --- fixed

People

(Reporter: saschanaz, Assigned: saschanaz)

References

()

Details

Attachments

(1 file)

Running new Notification('7٩۰\r2󠏰‪󠘽󠞭9I%=◺o𯏡󠇈🩰‪칤󠥎󠆉ⁿ󠂏쬩𝆀𯞨#٩[\b7᩿󠣁鸲𝅧𨝊٫۹\r\n') triggers XUL notification for every other notification after that. But broken notification should not affect others.

This is tricky as falling back to XUL backend means notification.close() should be handled by the same backend. I think in this case it should just error out rather than falling back. Filed a spec issue because the relevant error behavior is currently not defined.

The fallback is mainly for Linux where the lack of libnotify can cause error, in which case repeating to try native backend makes no sense. That does not apply to Windows and macOS.

OS: Unspecified → Windows 11
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c159ee569750 Stop falling back to XUL on Windows/macOS r=nalexander
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: