Bug 1874960 - Stop falling back to XUL on Windows/macOS r=nalexander

The fallback is mainly for Linux where the lack of libnotify can cause error, in which case repeating to try native backend makes no sense. That does not apply to Windows and macOS.

Differential Revision: https://phabricator.services.mozilla.com/D200809