toolkit/components/alerts/nsAlertsService.cpp
@@ -201,6 +201,18 @@ NS_IMETHODIMP nsAlertsService::ShowAlert(nsIAlertNotification* aAlert,
   return ShowPersistentNotification(u""_ns, aAlert, aAlertListener);
 }
 
+static bool ShouldFallBackToXUL() {
+#if defined(XP_WIN) || defined(XP_MACOSX)
+  // We know we always have system backend on Windows and macOS. Let's not
+  // permanently fall back to XUL just because of temporary failure.
+  return false;
+#else
+  // The system may not have the notification library, we should fall back to
+  // XUL.
+  return true;
+#endif
+}
+
 NS_IMETHODIMP nsAlertsService::ShowPersistentNotification(
     const nsAString& aPersistentData, nsIAlertNotification* aAlert,
     nsIObserver* aAlertListener) {
@@ -223,7 +235,7 @@ NS_IMETHODIMP nsAlertsService::ShowPersistentNotification(
   // notifications
   if (ShouldUseSystemBackend()) {
     rv = ShowWithBackend(mBackend, aAlert, aAlertListener, aPersistentData);
-    if (NS_SUCCEEDED(rv)) {
+    if (NS_SUCCEEDED(rv) || !ShouldFallBackToXUL()) {
       return rv;
     }
     // If the system backend failed to show the alert, clear the backend and
@@ -256,7 +268,7 @@ NS_IMETHODIMP nsAlertsService::CloseAlert(const nsAString& aAlertName,
   // Try the system notification service.
   if (ShouldUseSystemBackend()) {
     rv = mBackend->CloseAlert(aAlertName, aContextClosed);
-    if (NS_WARN_IF(NS_FAILED(rv))) {
+    if (NS_WARN_IF(NS_FAILED(rv)) && ShouldFallBackToXUL()) {
       // If the system backend failed to close the alert, fall back to XUL for
       // future alerts.
       mBackend = nullptr;
